--- a/manifests/first-pod.yaml
+++ b/manifests/first-pod.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: webapp
+  name: webapp-release-0
   labels:
     app : webapp
+    release: "0"
 spec:
   containers:
     - name: webappp
