--- a/manifests/mongo-deployment.yaml
+++ b/manifests/mongo-deployment.yaml
@@ -15,3 +15,11 @@ spec:
       containers:
         - name: mongo
           image: mongo:3.6.5-jessie
+          volumeMounts:
+            - name: mongo-persistent-storage
+              mountPath: /data/db
+      volumes:
+        - name: mongo-persistent-storage
+          hostPath:
+            path: /mnt/some/directory/structure
+            type: DirectoryOrCreate
