--- a/manifests/webapp-service.yaml
+++ b/manifests/webapp-service.yaml
@@ -3,10 +3,9 @@ kind: Service
 metadata:
   name: fleetman-webapp
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: webapp
   ports:
     - name: http
       port: 80
-      nodePort: 30080
