Used Config Map to distribute environment variables from one central place across multiple pods

--- a/manifests/position-simulator-deployment.yaml
+++ b/manifests/position-simulator-deployment.yaml
@@ -16,5 +16,9 @@ spec:
         - name: position-simulator
           image: richardchesterwood/k8s-fleetman-position-simulator:release2
           env:
-            - name: SPRING_PROFILES_ACTIVE
-              value: production-microservice
+          - name: SPRING_PROFILES_ACTIVE
+            value: production-microservice
+          envFrom:
+            - configMapRef:
+                name: global-database-config-v3
+
