--- a/manifests/database-config.yaml
+++ b/manifests/database-config.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: global-database-config-v3
+  name: global-database-config-v4
   namespace: default
 data:
-  DATABASE_URL: "https://mydatabaseserver.somewhere.com:3306"
-  DATABASE_PASSWORD: "P@ssword1"
+  database.properties: |
+    database.url=https://mydatabaseserver.somewhere.com:3306
+    database.password=P@ssword1
