Upgraded microservices version to use the images with reduced heap's size

--- a/manifests/api-gateway-deployment.yaml
+++ b/manifests/api-gateway-deployment.yaml
@@ -14,7 +14,11 @@ spec:
     spec:
       containers:
         - name: api-gateway
-          image: richardchesterwood/k8s-fleetman-api-gateway:release2
+          image: richardchesterwood/k8s-fleetman-api-gateway:resources
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
+          resources:
+            requests:
+              memory: 200Mi
+              cpu: 50m
