--- a/manifests/activemq-deployment.yaml
+++ b/manifests/activemq-deployment.yaml
@@ -14,4 +14,8 @@ spec:
     spec:
       containers:
         - name: activemq
-          image: richardchesterwood/k8s-fleetman-queue:release2
+          image: richardchesterwood/k8s-fleetman-queue:resources
+          resources:
+            requests:
+              memory: 300Mi
+              cpu: 100m
