--- a/manifests/mongo-deployment.yaml
+++ b/manifests/mongo-deployment.yaml
@@ -18,6 +18,10 @@ spec:
           volumeMounts:
             - name: mongo-persistent-storage
               mountPath: /data/db
+          resources:
+            requests:
+              memory: 500Mi
+              cpu: 500m
       volumes:
         - name: mongo-persistent-storage
           # pointer to the configuration of how we want the mount to be implemented
