--- a/manifests/position-tracker-deployment.yaml
+++ b/manifests/position-tracker-deployment.yaml
@@ -14,7 +14,11 @@ spec:
     spec:
       containers:
         - name: position-tracker
-          image: richardchesterwood/k8s-fleetman-position-tracker:release3
+          image: richardchesterwood/k8s-fleetman-position-tracker:resources
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
+          resources:
+            requests:
+              memory: 200Mi
+              cpu: 50m
