--- a/manifests/webapp-deployment.yaml
+++ b/manifests/webapp-deployment.yaml
@@ -18,3 +18,7 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
+          resources:
+            requests:
+              memory: 100Mi
+              cpu: 50m
