Horizontal Pod Autoscaling with Readiness Probe

--- a/manifests/activemq/activemq-deployment.yaml
+++ b/manifests/activemq/activemq-deployment.yaml
@@ -19,3 +19,6 @@ spec:
             requests:
               memory: 300Mi
               cpu: 100m
+            limits: # requests = limits: QoS: Guaranteed
+              memory: 300Mi
+              cpu: 100m
