Replicated MongoDb as a stateful set.

--- a/manifests/position-tracker/position-tracker-deployment.yaml
+++ b/manifests/position-tracker/position-tracker-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: position-tracker
-          image: richardchesterwood/k8s-fleetman-position-tracker:resources
+          image: richardchesterwood/k8s-fleetman-position-tracker:release4
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: production-microservice
