--- a/manifests/mongo/mongo-service.yaml
+++ b/manifests/mongo/mongo-service.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fleetman-mongodb
+  name: mongo
+  labels:
+    name: mongo
 spec:
-  type: ClusterIP
   selector:
-    app: mongodb
+    role: mongo
+  clusterIP: None
   ports:
     - name: mongoport
       port: 27017
